--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
-<html>
-	<turtlehead>
+<html lang="en">
+	<head>
 		<title>
-
+		
 		</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="css/main.css" />
+		
 	</head>
 	<body>
-
-	
-	
-	
+		<div id="big_wrapper">
+			<header id="top_header">
+			
+			</header>
+			<nav id="top_menu">
+				
+			</nav>
+			<section id="main_section">
+			
+			</section>
+			<footer id="the_footer">
+			
+			</footer>
+		</div>
 	</body>
 </html>
 
