--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 	<body>
 		<div id="big_wrapper">
 			<header id="top_header">
-			
+				<span id="website_title">Website</span>
 			</header>
 			<nav id="top_menu">
-				
+				<a><p>Home</p></a>
+				<a><p>About Us</p></a>
+				<a><p>????????</p></a>
+				<a><p>Login</p></a>
+				<a><p>Register</p></a>
 			</nav>
 			<section id="main_section">
 			
