--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
 				<a><p>Register</p></a>
 			</nav>
 			<section id="main_section">
-			
+				<h1>Home Page 主頁</h1>
+				<article>
+					<p>Welcome to the our website!!</p>
+				</article>
 			</section>
 			<footer id="the_footer">
-			
+				<a href="contact_us.html">Contact us</a> -
+				<a href="site_map.html">Site Map</a>
+				<p>Copyright &copy; 2016</p>
 			</footer>
 		</div>
 	</body>
