--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	<body>
 		<div id="big_wrapper">
 			<header id="top_header">
-				<span id="website_title">Website</span>
+				<span id="website_title">4 Dimension's Book Store</span>
 			</header>
 			<nav id="top_menu">
 				<a><p>Home</p></a>
 				<a><p>About Us</p></a>
-				<a><p>????????</p></a>
+				<a><p>Books</p></a>
 				<a><p>Login</p></a>
 				<a><p>Register</p></a>
 			</nav>
@@ -30,7 +30,7 @@
 			<footer id="the_footer">
 				<a href="contact_us.html">Contact us</a> -
 				<a href="site_map.html">Site Map</a>
-				<p>Copyright &copy; 2016</p>
+				<p>Copyright &copy; 4 Dimension 2016</p>
 			</footer>
 		</div>
 	</body>
