--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 			</header>
 			<nav id="top_menu">
 				<a href="index.html"><p>Home</p></a>
-				<a><p>About Us</p></a>
+				<a href="about_us.html"><p>About Us</p></a>
 				<a href="books.html"><p>Books</p></a>
 				<a href="login.html"><p>Login</p></a>
-				<a><p>Register</p></a>
+				<a href="register.html"><p>Register</p></a>
 			</nav>
 			<section id="main_section">
 				<h1>Home Page 主頁</h1>
