--- a/login.html
+++ b/login.html
@@ -15,11 +15,11 @@
 				<span id="website_title">4 Dimension's Book Store</span>
 			</header>
 			<nav id="top_menu">
-				<a><p>Home</p></a>
-				<a><p>About Us</p></a>
-				<a><p>Books</p></a>
-				<a><p>Login</p></a>
-				<a><p>Register</p></a>
+				<a href="index.html"><p>Home</p></a>
+				<a href="about_us.html"><p>About Us</p></a>
+				<a href="books.html"><p>Books</p></a>
+				<a href="login.html"><p>Login</p></a>
+				<a href="register.html"><p>Register</p></a>
 			</nav>
 			<section id="main_section">
 				<h1>Login</h1>
