--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" href="../img/favicon.ico" />
 		<link rel="stylesheet" href="css/main.css" />
 		
 	</head>
@@ -22,7 +23,7 @@
 				<a href="register.html"><p>Register</p></a>
 			</nav>
 			<section id="main_section">
-				<h1>Home Page 主頁</h1>
+				<h1>Home Page</h1>
 				<article>
 					<p>Welcome to the our website!!</p>
 				</article>
