--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
 		</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" href="../img/favicon.ico" />
 		<link rel="stylesheet" href="css/main.css" />
 		
 	</head>
