--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
 		</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" href="../img/favicon.ico" />
 		<link rel="stylesheet" href="css/main.css" />
 		
 	</head>
@@ -41,7 +42,7 @@
 						<br />
 						Date of Birth:
 						<input type="date" name="date_of_birth" placeholder="DD-MM-YYYY" required="" autofocus="" />
-						</br>
+						<br />
 						Username:
 						<input type="text" name="username" placeholder="Username" required="" autofocus="" />
 						<br />
