--- a/books.html
+++ b/books.html
@@ -6,7 +6,7 @@
 		</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="shortcut icon" href="../img/favicon.ico" />
+		<link rel="shortcut icon" href="img/favicon.ico" />
 		<link rel="stylesheet" href="css/main.css" />
 		<link rel="stylesheet" href="css/books.css" />
 		
@@ -14,6 +14,7 @@
 	<body>
 		<div id="big_wrapper">
 			<header id="top_header">
+				<a href="index.html"><img id="logo" src="img/logo.png" alt="Logo"></a>
 				<span id="website_title">4 Dimension's Book Store</span>
 			</header>
 			<nav id="top_menu">
