--- a/books.html
+++ b/books.html
@@ -37,10 +37,10 @@
 				<footer id="footer">
 					<br />
 					<h2>We support the following payment methods :</h2>
-					<img src="png/Visa.png" alt="visa_logo" height="80em"/>
-					<img src="png/MasterCard.png" alt="MasterCard_logo" height="80em"/>
-					<img src="png/AmericanExpress.png" alt="AmericanExpress_logo" height="80em"/>
-					<img src="png/Paypal.png" alt="Paypal_logo" height="80em"/>
+					<img src="img/Visa.png" alt="visa_logo" height="80em"/>
+					<img src="img/MasterCard.png" alt="MasterCard_logo" height="80em"/>
+					<img src="img/AmericanExpress.png" alt="AmericanExpress_logo" height="80em"/>
+					<img src="img/Paypal.png" alt="Paypal_logo" height="80em"/>
 				</footer>
 			</section>
 			<footer id="the_footer">
