--- a/register.html
+++ b/register.html
@@ -20,8 +20,7 @@
 				<a href="index.html"><p>Home</p></a>
 				<a href="about_us.html"><p>About Us</p></a>
 				<a href="books.html"><p>Books</p></a>
-				<a href="login.html"><p>Login</p></a>
-				<a href="register.html"><p>Register</p></a>
+				<a href="login.html"><p>Login/Register</p></a>
 			</nav>
 			<section id="main_section">
 				<h1>Register </h1>
