--- a/books.html
+++ b/books.html
@@ -26,7 +26,7 @@
 			<section id="main_section">
 				<h1>Books</h1>
 				<article>
-					<a><p>Harry Potter</p></a>
+					<a href="books/harry_potter.html"><p>Harry Potter</p></a>
 					<a><p>The Maze Runner</p></a>
 					<a><p>Divergents</p></a>
 					<a><p>The Hunger Games</p></a>
