--- a/books.html
+++ b/books.html
@@ -27,9 +27,9 @@
 				<h1>Books</h1>
 				<article>
 					<a href="books/harry_potter.html"><p>Harry Potter</p></a>
-					<a><p>The Maze Runner</p></a>
-					<a><p>Divergents</p></a>
-					<a><p>The Hunger Games</p></a>
+					<a href="books/maze_runner.html"><p>The Maze Runner</p></a>
+					<a href="books/divergents.html"><p>Divergents</p></a>
+					<a href="books/hunger_games.html"><p>The Hunger Games</p></a>
 					
 					
 				</article>
