--- a/books/harry_potter.html
+++ b/books/harry_potter.html
@@ -23,9 +23,9 @@
 				<a href="../login.html"><p>Login/Register</p></a>
 			</nav>
 			<section id="main_section">
-				<h1>Harry potter</h1>
+				<h1>Harry Potter</h1>
 				<article>
-					
+					<img src="../img/harry_potter.png" />
 				</article>
 			</section>
 			<footer id="the_footer">
