--- a/books/divergents.html
+++ b/books/divergents.html
@@ -25,7 +25,7 @@
 			<section id="main_section">
 				<h1>Divergents</h1>
 				<article>
-					<img src="../img/divergents.png" />
+					<img src="../img/divergents.jpg" />
 				</article>
 			</section>
 			<footer id="the_footer">
