--- a/books/harry_potter.html
+++ b/books/harry_potter.html
@@ -25,7 +25,7 @@
 			<section id="main_section">
 				<h1>Harry Potter</h1>
 				<article>
-					<img src="../img/harry_potter.png" />
+					<img src="../img/harry_potter.jpg" />
 				</article>
 			</section>
 			<footer id="the_footer">
