--- a/books/hunger_games.html
+++ b/books/hunger_games.html
@@ -25,7 +25,7 @@
 			<section id="main_section">
 				<h1>The Hunger Games</h1>
 				<article>
-					<img src="../img/hunger_games.png" />
+					<img src="../img/hunger_games.jpg" />
 				</article>
 			</section>
 			<footer id="the_footer">
