--- a/books/maze_runner.html
+++ b/books/maze_runner.html
@@ -25,7 +25,7 @@
 			<section id="main_section">
 				<h1>The Maze Runner</h1>
 				<article>
-					<img src="../img/maze_runner.png" />
+					<img src="../img/maze_runner.jpg" />
 				</article>
 			</section>
 			<footer id="the_footer">
