--- a/login/index.html
+++ b/login/index.html
@@ -6,8 +6,8 @@
 		</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="shortcut icon" href="img/favicon.ico" />
-		<link rel="stylesheet" href="css/main.css" />
+		<link rel="shortcut icon" href="../img/favicon.ico" />
+		<link rel="stylesheet" href="../css/main.css" />
 		
 	</head>
 	<body>
