--- a/books/maze_runner.html
+++ b/books/maze_runner.html
@@ -13,7 +13,7 @@
 	<body>
 		<div id="big_wrapper">
 			<header id="top_header">
-				<a href="../index.html"><img id="logo" src="../img/logo.png" alt="Logo"></a>
+				<a href="../index.html"><img id="logo" src="../img/logo.jpg" alt="Logo"></a>
 				<span id="website_title">4 Dimension's Book Store</span>
 			</header>
 			<nav id="top_menu">
