--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="shortcut icon" href="img/favicon.ico" />
 		<link rel="stylesheet" href="css/main.css" />
-		
+		<script src="js/login.js"></script>
 	</head>
 	<body>
 		<div id="big_wrapper">
