--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
 			<section id="main_section">
 				<h1>Register </h1>
 				<article>
-					<form method="post" >
+					<form method="post" action="../login/successfully_registered.html" onsubmit="checkPass(); return false;">
 						<br />
 						First Name:
 						<input type="text" name="first_name" placeholder="First Name" required="" autofocus="" />
@@ -54,7 +54,7 @@
 						<span id="confirmMessage" class="confirmMessage"></span>
 						<br />
 						<input type="reset" name="reset" value="Reset" />
-						<input type="submit" name="submit" value="Submit"/>
+						<input type="submit" name="submit" value="Submit" onclick="checkPass(); return false;"/>
 					</form>
 				</article>
 			</section>
