--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
 			<section id="main_section">
 				<h1>Register </h1>
 				<article>
-					<form method="post" action="reg.php" onsubmit="checkPass(); return false;">
+					<form method="post" action="reg.php">
 						<br />
 						First Name:
 						<input type="text" name="first_name" placeholder="First Name" required="" autofocus="" />
