--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
 			<section id="main_section">
 				<h1>Register </h1>
 				<article>
-					<form method="post" action="index.html">
+					<form method="post" onsubmit="index.html">
 						<br />
 						First Name:
 						<input type="text" name="first_name" placeholder="First Name" required="" autofocus="" />
