--- a/register.html
+++ b/register.html
@@ -54,7 +54,7 @@
 						<span id="confirmMessage" class="confirmMessage"></span>
 						<br />
 						<input type="reset" name="reset" value="Reset" />
-						<input type="submit" name="submit" value="Submit" onclick="checkPass()"/>
+						<input type="submit" name="submit" value="Submit" onclick="checkPass(); return false;"/>
 					</form>
 				</article>
 			</section>
