--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
 						<input type="submit" value="Submit" />
 					</form>
                     <p><a href="../reset_password.html">Forgot your password? </a></p>
-                    <p><a href="../register.html">Not a member? Register</a></p>
+                    <p><a href="../register.php">Not a member? Register</a></p>
 				</article>
 			</section>
 			<footer id="the_footer">
