--- a/reset_password.html
+++ b/reset_password.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>
-		
-		</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="shortcut icon" href="img/favicon.ico" />
-		<link rel="stylesheet" href="css/main.css" />
-		
-	</head>
-	<body>
-		<div id="big_wrapper">
-			<header id="top_header">
-				<a href="../index.html"><img id="logo" src="img/logo.png" alt="Logo"></a>
-				<span id="website_title">4 Dimension's Book Store</span>
-			</header>
-			<nav id="top_menu">
-				<a href="index.html"><p>Home</p></a>
-				<a href="about_us.html"><p>About Us</p></a>
-				<a href="books.html"><p>Books</p></a>
-				<a href="login.html"><p>Login/Register</p></a>
-			</nav>
-			<section id="main_section">
-				<h1>Reset Password</h1>
-				<article>
-					<form method="post" >
-						E-mail Address:
-						<input type="email" name="email" placeholder="abcde@fghk.com" required="" autofocus="" />
-						<br />
-						Username:
-						<input type="text" name="username" placeholder="Username" required="" autofocus="" />
-						<br />
-						<input type="reset" name="reset" value="Reset" />
-						<input type="submit" name="submit" value="Submit" onclick="alert(&quot Your new password has been sent to your e-mail account!! &quot)"/>
-					</form>
-				</article>
-			</section>
-			<footer id="the_footer">
-				<a href="contact_us.html">Contact us</a> -
-				<a href="site_map.html">Site Map</a>
-				<p>Copyright &copy; 4 Dimension 2016</p>
-			</footer>
-		</div>
-	</body>
+
+<head>
+    <title>
+        Password Reset
+    </title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="stylesheet" href="css/main.css" />
+
+</head>
+
+<body>
+    <div id="big_wrapper">
+        <header id="top_header">
+            <a href="../index.html"><img id="logo" src="img/logo.png" alt="Logo"></a>
+            <span id="website_title">4 Dimension's Book Store</span>
+        </header>
+        <nav id="top_menu">
+            <a href="index.html">
+                <p>Home</p>
+            </a>
+            <a href="about_us.html">
+                <p>About Us</p>
+            </a>
+            <a href="books.html">
+                <p>Books</p>
+            </a>
+            <a href="login.html">
+                <p>Login/Register</p>
+            </a>
+        </nav>
+        <section id="main_section">
+            <h1>Reset Password</h1>
+            <article>
+                <form method="post">
+                    E-mail Address:
+                    <input type="email" name="email" placeholder="abcde@fghk.com" required="" autofocus="" />
+                    <br /> Username:
+                    <input type="text" name="username" placeholder="Username" required="" autofocus="" />
+                    <br />
+                    <input type="reset" name="reset" value="Reset" />
+                    <input type="submit" name="submit" value="Submit" onclick="alert(&quot Your new password has been sent to your e-mail account!! &quot)" />
+                </form>
+            </article>
+        </section>
+        <footer id="the_footer">
+            <a href="contact_us.html">Contact us</a> -
+            <a href="site_map.html">Site Map</a>
+            <p>Copyright &copy; 4 Dimension 2016</p>
+        </footer>
+    </div>
+</body>
+
 </html>8
