--- a/books.html
+++ b/books.html
@@ -1,52 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>
-		
-		</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="shortcut icon" href="img/favicon.ico" />
-		<link rel="stylesheet" href="css/main.css" />
-		<link rel="stylesheet" href="css/books.css" />
-		
-	</head>
-	<body>
-		<div id="big_wrapper">
-			<header id="top_header">
-				<a href="index.html"><img id="logo" src="img/logo.png" alt="Logo"></a>
-				<span id="website_title">4 Dimension's Book Store</span>
-			</header>
-			<nav id="top_menu">
-				<a href="index.html"><p>Home</p></a>
-				<a href="about_us.html"><p>About Us</p></a>
-				<a href="books.html"><p>Books</p></a>
-				<a href="login.html"><p>Login/Register</p></a>
-			</nav>
-			<section id="main_section">
-				<h1>Books</h1>
-				<article>
-					<a href="books/harry_potter.html"><p>Harry Potter</p></a>
-					<a href="books/maze_runner.html"><p>The Maze Runner</p></a>
-					<a href="books/divergents.html"><p>Divergents</p></a>
-					<a href="books/hunger_games.html"><p>The Hunger Games</p></a>
-					
-					
-				</article>
-				<footer id="footer">
-					<br />
-					<h2>We support the following payment methods :</h2>
-					<img src="img/Visa.png" alt="visa_logo" height="80em"/>
-					<img src="img/MasterCard.png" alt="MasterCard_logo" height="80em"/>
-					<img src="img/AmericanExpress.png" alt="AmericanExpress_logo" height="80em"/>
-					<img src="img/Paypal.png" alt="Paypal_logo" height="80em"/>
-				</footer>
-			</section>
-			<footer id="the_footer">
-				<a href="contact_us.html">Contact us</a> -
-				<a href="site_map.html">Site Map</a>
-				<p>Copyright &copy; 4 Dimension 2016</p>
-			</footer>
-		</div>
-	</body>
+
+<head>
+    <title>
+        Books
+    </title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/books.css" />
+
+</head>
+
+<body>
+    <div id="big_wrapper">
+        <header id="top_header">
+            <a href="index.html"><img id="logo" src="img/logo.png" alt="Logo"></a>
+            <span id="website_title">4 Dimension's Book Store</span>
+        </header>
+        <nav id="top_menu">
+            <a href="index.html">
+                <p>Home</p>
+            </a>
+            <a href="about_us.html">
+                <p>About Us</p>
+            </a>
+            <a href="books.html">
+                <p>Books</p>
+            </a>
+            <a href="login.html">
+                <p>Login/Register</p>
+            </a>
+        </nav>
+        <section id="main_section">
+            <h1>Books</h1>
+            <article>
+                <a href="books/harry_potter.html">
+                    <p>Harry Potter</p>
+                </a>
+                <a href="books/maze_runner.html">
+                    <p>The Maze Runner</p>
+                </a>
+                <a href="books/divergents.html">
+                    <p>Divergents</p>
+                </a>
+                <a href="books/hunger_games.html">
+                    <p>The Hunger Games</p>
+                </a>
+
+
+            </article>
+            <footer id="footer">
+                <br />
+                <h2>We support the following payment methods :</h2>
+                <img src="img/Visa.png" alt="visa_logo" height="80em" />
+                <img src="img/MasterCard.png" alt="MasterCard_logo" height="80em" />
+                <img src="img/AmericanExpress.png" alt="AmericanExpress_logo" height="80em" />
+                <img src="img/Paypal.png" alt="Paypal_logo" height="80em" />
+            </footer>
+        </section>
+        <footer id="the_footer">
+            <a href="contact_us.html">Contact us</a> -
+            <a href="site_map.html">Site Map</a>
+            <p>Copyright &copy; 4 Dimension 2016</p>
+        </footer>
+    </div>
+</body>
+
 </html>
